--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -14,6 +14,9 @@
         <li>
           <%= link_to 'Home', :root %>
         </li>
+        <li>
+        <%= link_to 'About Us', :about %>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Categories
@@ -36,14 +39,23 @@
           <ul class="dropdown-menu">
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
-            <li><%= link_to 'Cateogies',  [:admin, :categories] %></li>
+            <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
         </li>
+        <ul class="nav navbar-nav">
+        <% if current_user %>
+        <li>Signed in as <%= current_user.email  %> </li>
         <li>
-          <%= link_to cart_path do %>
-            <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
-          <% end %>
-        </li>
+        <%= link_to cart_path do %>
+          <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
+        <% end %>
+      </li>
+      <li><%= link_to "Logout", '/logout' %></li>
+<% else %>
+<li><%= link_to 'Login', '/login' %></li>
+<li><%= link_to 'Signup', '/signup' %></li>
+<% end %>
+</ul>
       </ul>
     </div>
   </div>
